--- a/HyperVSocks/HyperVSocks.vcxproj.filters
+++ b/HyperVSocks/HyperVSocks.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="windep.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
